--- a/src/components/assets/js/ELanguage/lang/lang.json
+++ b/src/components/assets/js/ELanguage/lang/lang.json
@@ -1,12 +1,25 @@
 {"de":{
-    "test": "TestText Deutsch",
-    "Monday": "MO",
-    "Tuesday": "DI",
-    "Wednesday": "MI",
-    "Thursday": "DO",
-    "Friday": "FR",
-    "Saturday": "SA",
-    "Sunday": "SO"
+  "test": "TestText Deutsch",
+  "Monday": "MO",
+  "Tuesday": "DI",
+  "Wednesday": "MI",
+  "Thursday": "DO",
+  "Friday": "FR",
+  "Saturday": "SA",
+  "Sunday": "SO",
+  "January": "Januar",
+  "February": "Februar", 
+  "March": "März", 
+  "April": "April", 
+  "May":"Mai", 
+  "June": "Juni",
+  "July": "Juli", 
+  "August": "August", 
+  "September": "September", 
+  "October": "Oktober", 
+  "November": "November", 
+  "December": "Dezember",
+  "Today": "Heute"
     
  },
  "en":{
@@ -17,7 +30,20 @@
   "Thursday": "THU",
   "Friday": "FRI",
   "Saturday": "SAT",
-  "Sunday": "SUN"
+  "Sunday": "SUN",
+  "January": "January",
+  "February": "February", 
+  "March": "March", 
+  "April": "April", 
+  "May":"May", 
+  "June": "June",
+  "July": "July", 
+  "August": "August", 
+  "September": "September", 
+  "October": "October", 
+  "November": "November", 
+  "December": "December",
+  "Today": "Heute"
 
   }
 }
